@@ -2,7 +2,7 @@
 
 # Form implementation generated from reading ui file '/home/neil/openmolar/openmolar/src/openmolar/qt-designer/main.ui'
 #
-# Created: Thu Oct 25 23:38:13 2012
+# Created: Sun Oct 28 20:42:25 2012
 #      by: PyQt4 UI code generator 4.9.3
 #
 # WARNING! All changes made in this file will be lost!
@@ -216,7 +216,7 @@ class Ui_MainWindow(object):
         self.scrollArea_4.setWidgetResizable(True)
         self.scrollArea_4.setObjectName(_fromUtf8("scrollArea_4"))
         self.scrollAreaWidgetContents_7 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_7.setGeometry(QtCore.QRect(0, 0, 704, 473))
+        self.scrollAreaWidgetContents_7.setGeometry(QtCore.QRect(0, 0, 495, 473))
         self.scrollAreaWidgetContents_7.setObjectName(_fromUtf8("scrollAreaWidgetContents_7"))
         self.horizontalLayout_10 = QtGui.QHBoxLayout(self.scrollAreaWidgetContents_7)
         self.horizontalLayout_10.setObjectName(_fromUtf8("horizontalLayout_10"))
@@ -675,7 +675,7 @@ class Ui_MainWindow(object):
         self.scrollArea_5.setWidgetResizable(True)
         self.scrollArea_5.setObjectName(_fromUtf8("scrollArea_5"))
         self.scrollAreaWidgetContents_8 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_8.setGeometry(QtCore.QRect(0, 0, 704, 504))
+        self.scrollAreaWidgetContents_8.setGeometry(QtCore.QRect(0, 0, 619, 504))
         self.scrollAreaWidgetContents_8.setObjectName(_fromUtf8("scrollAreaWidgetContents_8"))
         self.gridLayout_20 = QtGui.QGridLayout(self.scrollAreaWidgetContents_8)
         self.gridLayout_20.setObjectName(_fromUtf8("gridLayout_20"))
@@ -869,7 +869,7 @@ class Ui_MainWindow(object):
         self.scrollArea_2.setWidgetResizable(True)
         self.scrollArea_2.setObjectName(_fromUtf8("scrollArea_2"))
         self.scrollAreaWidgetContents_5 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_5.setGeometry(QtCore.QRect(0, 0, 724, 487))
+        self.scrollAreaWidgetContents_5.setGeometry(QtCore.QRect(0, 0, 457, 487))
         self.scrollAreaWidgetContents_5.setObjectName(_fromUtf8("scrollAreaWidgetContents_5"))
         self.horizontalLayout_26 = QtGui.QHBoxLayout(self.scrollAreaWidgetContents_5)
         self.horizontalLayout_26.setObjectName(_fromUtf8("horizontalLayout_26"))
@@ -1252,7 +1252,7 @@ class Ui_MainWindow(object):
         self.scrollArea_3.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.scrollArea_3.setObjectName(_fromUtf8("scrollArea_3"))
         self.scrollAreaWidgetContents_3 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_3.setGeometry(QtCore.QRect(0, 0, 518, 386))
+        self.scrollAreaWidgetContents_3.setGeometry(QtCore.QRect(0, 0, 102, 102))
         self.scrollAreaWidgetContents_3.setObjectName(_fromUtf8("scrollAreaWidgetContents_3"))
         self.verticalLayout_5 = QtGui.QVBoxLayout(self.scrollAreaWidgetContents_3)
         self.verticalLayout_5.setSpacing(0)
@@ -1337,7 +1337,7 @@ class Ui_MainWindow(object):
         self.estimate_scrollArea.setWidgetResizable(True)
         self.estimate_scrollArea.setObjectName(_fromUtf8("estimate_scrollArea"))
         self.scrollAreaWidgetContents_11 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_11.setGeometry(QtCore.QRect(0, 0, 468, 200))
+        self.scrollAreaWidgetContents_11.setGeometry(QtCore.QRect(0, 0, 98, 200))
         self.scrollAreaWidgetContents_11.setObjectName(_fromUtf8("scrollAreaWidgetContents_11"))
         self.horizontalLayout_19 = QtGui.QHBoxLayout(self.scrollAreaWidgetContents_11)
         self.horizontalLayout_19.setObjectName(_fromUtf8("horizontalLayout_19"))
@@ -1354,7 +1354,7 @@ class Ui_MainWindow(object):
         self.scrollArea.setWidgetResizable(True)
         self.scrollArea.setObjectName(_fromUtf8("scrollArea"))
         self.scrollAreaWidgetContents_4 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_4.setGeometry(QtCore.QRect(0, 0, 220, 512))
+        self.scrollAreaWidgetContents_4.setGeometry(QtCore.QRect(0, 0, 191, 512))
         self.scrollAreaWidgetContents_4.setObjectName(_fromUtf8("scrollAreaWidgetContents_4"))
         self.verticalLayout_9 = QtGui.QVBoxLayout(self.scrollAreaWidgetContents_4)
         self.verticalLayout_9.setObjectName(_fromUtf8("verticalLayout_9"))
@@ -1502,7 +1502,7 @@ class Ui_MainWindow(object):
         self.perioCharts_scrollArea.setWidgetResizable(True)
         self.perioCharts_scrollArea.setObjectName(_fromUtf8("perioCharts_scrollArea"))
         self.scrollAreaWidgetContents_6 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_6.setGeometry(QtCore.QRect(0, 0, 724, 386))
+        self.scrollAreaWidgetContents_6.setGeometry(QtCore.QRect(0, 0, 261, 385))
         self.scrollAreaWidgetContents_6.setObjectName(_fromUtf8("scrollAreaWidgetContents_6"))
         self.gridLayout_15 = QtGui.QGridLayout(self.scrollAreaWidgetContents_6)
         self.gridLayout_15.setObjectName(_fromUtf8("gridLayout_15"))
@@ -1831,7 +1831,7 @@ class Ui_MainWindow(object):
         self.scrollArea_9.setWidgetResizable(True)
         self.scrollArea_9.setObjectName(_fromUtf8("scrollArea_9"))
         self.scrollAreaWidgetContents_15 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_15.setGeometry(QtCore.QRect(0, 0, 194, 279))
+        self.scrollAreaWidgetContents_15.setGeometry(QtCore.QRect(0, 0, 212, 309))
         self.scrollAreaWidgetContents_15.setMinimumSize(QtCore.QSize(180, 0))
         self.scrollAreaWidgetContents_15.setObjectName(_fromUtf8("scrollAreaWidgetContents_15"))
         self.verticalLayout_37 = QtGui.QVBoxLayout(self.scrollAreaWidgetContents_15)
@@ -1990,10 +1990,6 @@ class Ui_MainWindow(object):
         self.verticalLayout_36.setSpacing(0)
         self.verticalLayout_36.setMargin(0)
         self.verticalLayout_36.setObjectName(_fromUtf8("verticalLayout_36"))
-        self.all_appts_checkBox = QtGui.QCheckBox(self.scrollAreaWidgetContents)
-        self.all_appts_checkBox.setChecked(True)
-        self.all_appts_checkBox.setObjectName(_fromUtf8("all_appts_checkBox"))
-        self.verticalLayout_36.addWidget(self.all_appts_checkBox)
         self.week_clinician_selector_groupBox = QtGui.QGroupBox(self.scrollAreaWidgetContents)
         sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Preferred, QtGui.QSizePolicy.Minimum)
         sizePolicy.setHorizontalStretch(0)
@@ -2235,7 +2231,7 @@ class Ui_MainWindow(object):
         self.monthView_scrollArea.setWidgetResizable(True)
         self.monthView_scrollArea.setObjectName(_fromUtf8("monthView_scrollArea"))
         self.scrollAreaWidgetContents_14 = QtGui.QWidget()
-        self.scrollAreaWidgetContents_14.setGeometry(QtCore.QRect(0, 0, 74, 16))
+        self.scrollAreaWidgetContents_14.setGeometry(QtCore.QRect(0, 0, 98, 28))
         self.scrollAreaWidgetContents_14.setObjectName(_fromUtf8("scrollAreaWidgetContents_14"))
         self.monthView_scrollArea.setWidget(self.scrollAreaWidgetContents_14)
         self.gridLayout_5.addWidget(self.monthView_scrollArea, 0, 0, 1, 4)
@@ -2987,7 +2983,7 @@ class Ui_MainWindow(object):
         self.label_6.setBuddy(self.pcdeEdit)
 
         self.retranslateUi(MainWindow)
-        self.main_tabWidget.setCurrentIndex(0)
+        self.main_tabWidget.setCurrentIndex(1)
         self.tabWidget.setCurrentIndex(4)
         self.contract_tabWidget.setCurrentIndex(2)
         self.stackedWidget.setCurrentIndex(0)
@@ -3328,7 +3324,6 @@ class Ui_MainWindow(object):
         self.daymemo_label.setText(_( u"TextLabel"))
         self.diary_tabWidget.setTabText(self.diary_tabWidget.indexOf(self.tab_dayview), _( u"Day View"))
         self.goto_current_week_PushButton.setText(_( u"View Current Week"))
-        self.all_appts_checkBox.setText(_( u"show All appointments"))
         self.week_clinician_selector_groupBox.setTitle(_( u"Manually Select Clinicians"))
         self.week_schedule_groupBox.setTitle(_( u"Schedule appointments"))
         self.weekPatient_label.setText(_( u"TextLabel"))
