@@ -1,3 +1,10 @@
+openmolar (0.3.1+bzr0776-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 28 Oct 2012 19:59:40 +0000
+
+
 openmolar (0.3.1+bzr0775-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
